# advents-of-code

./: .gitignore  README.md  aocp  aocr  aoctools.py  draw.txt  extract_examples.py  requirements.txt  setup.sh
2015/: README.md
2015/01/: 01.py  01.rs  README.md
2015/02/: 02.py  02.rs  README.md
2015/03/: 03.py  03.rs  README.md
2015/04/: 04.py  04.rs  README.md
2015/05/: 05 2.py  05.py  05.rs  README.md
2015/06/: 06 2.rs  06.py  06.rs  README.md
2015/07/: 07 2.py  07 2.rs  07.py  07.rs  README.md
2015/08/: 08.py  08.rs
2015/09/: 09.py  09.rs
2015/10/: 10.py  10.rs  README.md
2015/11/: 11.py  11.rs  README.md
2015/12/: 12.py  12.rs  README.md
2015/13/: 13.py  13.rs  README.md
2015/14/: 14.py  14.rs  README.md
2015/15/: 15.py  15.rs  README.md
2015/16/: 16.py  16.rs
2015/17/: 17.py  17.rs  README.md
2015/18/: 18.py  18.rs
2015/19/: 19.py  19.rs  README.md
2015/20/: 20.py  20.rs  README.md
2015/21/: 21.py  21.rs
2015/22/: 22.py  22.rs
2015/23/: 23.py  23.rs  README.md
2015/24/: 24.py  24.rs
2015/25/: 25.py  25.rs
2015/Python/: 05.py  06.py  07.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  17.py  24.py  4.py  5.py  6.py  8.py  9.py
2015/Python_framework/: AoC_tools.py  main.py
2015/Rust/: Cargo.toml
2015/Rust/src/: lib.rs
2015/Rust_framework/: Cargo.toml
2015/inputs/: 05.txt
2016/01/: 01.py  01.rs
2016/02/: 02.py  02.rs
2016/03/: 03.py  03.rs  README.md
2016/04/: 04.py  04.rs
2016/05/: 05.py  05.rs
2016/06/: 06.py  06.rs
2016/07/: 07.py  07.rs
2016/08/: 08.py  08.rs
2016/09/: 09.py  09.rs
2016/10/: 10.py  10.rs
2016/11/: 11.py  11.rs
2016/12/: 12.py  12.rs
2016/13/: 13.py  13.rs
2016/14/: 14.py  14.rs
2016/15/: 15.py  15.rs
2016/16/: 16.py  16.rs
2016/17/: 17.py  17.rs
2016/18/: 18.py  18.rs
2016/19/: 19.py  19.rs
2016/20/: 20.py  20.rs
2016/21/: 21.py
2016/22/: 22.py
2016/23/: 23.py  23.rs
2016/24/: 24.py
2016/25/: 25.py  25.rs
2016/Python/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  16.py  19.py  20.py  21.py  23.py  25.py  AoC_tools.py
2016/Python_framework/: AoC_tools.py  main.py
2016/Rust/: Cargo.toml
2016/Rust_framework/: Cargo.toml
2016/inputs/: 23.txt
2017/01/: 01.py  01.rs
2017/02/: 02.py  02.rs
2017/03/: 03.py  03.rs
2017/04/: 04.py  04.rs
2017/05/: 05.py  05.rs
2017/06/: 06.py  06.rs
2017/07/: 07.py
2017/08/: 08.py  08.rs
2017/09/: 09.py  09.rs
2017/10/: 10.py  10.rs
2017/11/: 11.py
2017/12/: 12.py
2017/13/: 13.py  13.rs
2017/14/: 14.py
2017/15/: 15.py  15.rs
2017/16/: 16.py
2017/17/: 17.py
2017/18/: 18.py
2017/19/: 19.py
2017/20/: 20.py
2017/21/: 21.py
2017/22/: 22.py
2017/23/: 23.py  explication.txt
2017/24/: 24.py
2017/25/: 25.py
2017/Python/: 01.py  04.py  06.py  10.py  11.py  14.py  17.py  18.py  22.py  24.py
2017/Python_framework/: AoC_tools.py  main.py
2017/Rust_framework/: Cargo.toml
2018/01/: 01.py  01.rs
2018/02/: 02.py  02.rs
2018/03/: 03.py  03.rs
2018/04/: 04.py
2018/05/: 05.py  05.rs
2018/06/: 06.py
2018/07/: 07.py
2018/08/: 08.py
2018/09/: 09.py
2018/10/: 10.py
2018/11/: 11.py
2018/12/: 12.py
2018/13/: 13.py
2018/14/: 14.py
2018/16/: 16.py
2018/17/: 17.py
2018/18/: 18.py
2018/19/: 19.py
2018/20/: 20.py
2018/21/: 21.py
2018/22/: 22.py  22.rs
2018/23/: 23.py
2018/24/: 24.py
2018/25/: 25.py
2018/Python/: AoC_tools.py  main.py
2018/Python_framework/: all.py
2018/Rust/: Cargo.toml
2019/01/: 01.py  01.rs
2019/02/: 02.py  02.rs
2019/03/: 03.py
2019/04/: 04.py
2019/05/: 05.py
2019/06/: 06.py
2019/07/: 07.py
2019/08/: 08.py
2019/09/: 09.py
2019/10/: 10.py
2019/11/: 11.py
2019/12/: 12.py
2019/13/: 13.py
2019/15/: 15.py
2019/16/: 16.py
2019/19/: 19.py
2019/Python_framework/: ship_computer.py
2019/Rust/: Cargo.toml
2019/Rust_framework/: Cargo.toml
2020/01/: 01.py
2020/02/: 02.py  02.rs
2020/03/: 03.py  03.rs
2020/04/: 04.py  04.rs
2020/05/: 05.py  05.rs
2020/06/: 06.py  06.rs
2020/07/: 07.py  07.rs
2020/08/: 08.py  08.rs
2020/09/: 09.py
2020/10/: 10.py
2020/11/: 11.py
2020/12/: 12.py
2020/13/: 13.py
2020/14/: 14.py
2020/15/: 15.py
2020/16/: 16.py
2020/17/: 17.py
2020/18/: 18.py
2020/19/: 19.py
2020/20/: 20.py
2020/21/: 21.py
2020/22/: 22.py  22.rs
2020/23/: 23.py
2020/24/: 24.py
2020/25/: 25.py
2020/Python/: 01.py  main.py
2020/Rust/: Cargo.toml
2020/Rust_framework/: Cargo.toml
2021/01/: 01.py  01.rs
2021/02/: 02.py  02.rs
2021/03/: 03.py  03.rs
2021/04/: 04.py
2021/05/: 05.py
2021/06/: 06.py  06.rs  README.md
2021/07/: 07.py  07.rs
2021/08/: 08.py
2021/09/: 09.py
2021/10/: 10.py
2021/11/: 11.py
2021/12/: 12.py
2021/13/: 13.py
2021/14/: 14.py
2021/15/: 15.py
2021/17/: 17.py
2021/Python/: 10.py  11.py  12.py  17.py  20.py
2021/Python_framework/: main.py
2021/Rust/: Cargo.toml
2021/Rust_framework/: Cargo.toml
2022/01/: 01.py  01.rs
2022/02/: 02.py  02.rs
2022/03/: 03.py  03.rs
2022/04/: 04.py  04.rs
2022/05/: 05.py  05.rs
2022/06/: 06.py  06.rs
2022/07/: 07.py  07.rs
2022/08/: 08.py  08.rs  08_1L.py
2022/09/: 09.py  09.rs
2022/10/: 10.py  10.rs
2022/11/: 11.py  11.rs
2022/12/: 12.py  12.rs
2022/13/: 13.py  13.rs
2022/14/: 14.py  14.rs
2022/Rust/: Cargo.toml
aoctools/: aoc_mw  classes.py  functions.py
completions/: _aocp_aocr  aocp-completion.bash
docs/: COMPLETION_TROUBLESHOOTING.md  PROJECT_STRUCTURE.md  SETUP_GUIDE.md  SETUP_SCRIPTS.md
pythonfw/: README.md  __init__.py  aoc_mw  aocp.py  classes.py  functions.py  ship_computer.py  y2017.py
rust-fw/: Cargo.toml
rust-fw/src/: lib.rs
rustfw/: AOCR.md  Cargo.toml  README.md
rustfw/scripts/: install_aocr.sh
rustfw/src/: lib.rs
scripts/: aoc_setup.sh  completion_helpers.py  enable_completion.sh  initial_setup.sh  install_completion.sh  scan_requirements.py  setup_aoc_environment.sh  setup_aoc_year.py  setup_completion.py  setup_completion_interactive.sh
(+1165 files in other folders)
