[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
num-integer = "0.1.44"
pathfinding = "4.0.0"
bitvec = "1.0.0"
md5 = "0.7.0"
crypto = "0.4.0"
text_io = "0.1.12"
grid = "0.9.0"
rand = "0.8"